fixed invisible buttons

--- a/Timesheet.Ui/index.css
+++ b/Timesheet.Ui/index.css
@@ -12,7 +12,7 @@
   --primary-button-border: #4752c4;
   --primary-button-hover: #4752c4;
 
-  --success: #d1fadf;
+  --success: #94e9b0;
   --success-border: #6ce9a6;
   --success-2: #12b76a;
   --success-2-hover: #039855;
@@ -36,7 +36,7 @@
   --primary-button-hover: #4e5de2;
   --success: #388a4b;
   --success-border: #2b6e3b;
-  --success-2: #388a4b;
+  --success-2: #46a15b;
   --success-2-hover: #52a365;
   --reject: #ec4b4b;
   --reject-border: #964444;
